--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rails-task-manager",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
